<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    tools:context=".Registro.RegistroActivity">


    <TextView
        android:id="@+id/text_humorTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/title1_registro"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_humorTittle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/title2_registro"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tag_alegre"
        app:layout_constraintTop_toBottomOf="@+id/tag_alegre" />

    <TextView
        android:id="@+id/tag_muitofeliz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/muitofeliz"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/text_humorTittle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/tag_estudos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/estudos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_familia"
        app:layout_constraintStart_toEndOf="@+id/tag_familia"
        app:layout_constraintTop_toTopOf="@+id/tag_familia"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tag_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/social"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_estudos"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tag_estudos"
        app:layout_constraintTop_toTopOf="@+id/tag_estudos" />

    <TextView
        android:id="@+id/tag_outros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/outros"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_trabalho"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tag_trabalho"
        app:layout_constraintTop_toTopOf="@+id/tag_trabalho"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tag_amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/amigos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tag_familia"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/tag_familia"
        app:layout_constraintTop_toBottomOf="@+id/tag_familia" />

    <TextView
        android:id="@+id/tag_trabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/trabalho"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_amigos"
        app:layout_constraintStart_toEndOf="@+id/tag_amigos"
        app:layout_constraintTop_toTopOf="@+id/tag_amigos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tag_familia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/familia"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_humorTittle2"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <TextView
        android:id="@+id/tag_alegre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/alegre"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tag_muitofeliz"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tag_muitofeliz"
        app:layout_constraintTop_toBottomOf="@+id/tag_muitofeliz" />

    <TextView
        android:id="@+id/tag_maismenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/mais_menos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_muitofeliz"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tag_muitofeliz"
        app:layout_constraintTop_toTopOf="@+id/tag_muitofeliz"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tag_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/normal"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_alegre"
        app:layout_constraintEnd_toEndOf="@+id/text_humorTittle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tag_alegre"
        app:layout_constraintTop_toTopOf="@+id/tag_alegre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tag_triste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_tag_registro"
        android:elevation="8dp"
        android:fontFamily="@font/itim"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/triste"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tag_normal"
        app:layout_constraintTop_toTopOf="@+id/tag_normal"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_humorTittle" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_humorTittle2"
        app:layout_constraintTop_toBottomOf="@+id/text_humorTittle2" />

    <Button

        android:id="@+id/button_proximo"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/color_2"
        android:elevation="8dp"
        android:text="@string/proximo"
        android:textSize="24sp"
        android:fontFamily="@font/itim"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/tag_amigos"
        app:layout_constraintVertical_bias="0.354" />

    <ImageView
        android:contentDescription="@string/arrow_back"
        android:id="@+id/button_voltar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>